@@ -1,18 +1,27 @@
+package tasks;
+
+import utils.SearchResults;
+import utils.TaskGang;
+
 import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.Executor;
 
+import static utils.ExceptionUtils.rethrowRunnable;
+
 /**
- * Customizes the SearchTaskGangCommon framework to process a one-shot
- * List of tasks via an Executor that creates a Thread for each
- * task. The Executor model is a Thread per task. The unit of
- * concurrency is each input String. The results processing model is
+ * Customizes the {@link SearchTaskGangCommon} framework to process a
+ * one-shot {@link List} of tasks via an {@link Executor} that creates
+ * a virtual {@link Thread} for each task. The {@link Executor} model
+ * uses a virtual {@link Thread}-per-task. The unit of concurrency is
+ * each input {@link String} and the results processing model is
  * synchronous.
  */
 public class OneShotThreadPerTask
        extends SearchTaskGangCommon {
     /**
-     * The List of worker Threads that were created.
+     * The {@link List} of worker {@link Thread} objects that were
+     * created.
      */
     private final List<Thread> mWorkerThreads;
 
@@ -22,26 +31,24 @@ public class OneShotThreadPerTask
     public OneShotThreadPerTask(String[] wordsToFind,
                                 String[][] stringsToSearch) {
         // Pass input to superclass constructor.
-        super(wordsToFind,
-              stringsToSearch);
+        super(wordsToFind, stringsToSearch);
 
-        // This List holds Threads so they can be joined.
+        // This List holds Thread objects so they can be joined.
         mWorkerThreads = new LinkedList<>();
     }
 
     /**
-     * Initiate the TaskGang to run each task in a separate Thread.
+     * Initiate the {@link TaskGang} to run each task in a separate
+     * {@link Thread}.
      */
     protected void initiateTaskGang(int inputSize) {
         // Create thread to run each task.
         if (getExecutor() == null) 
             // Create an Executor that runs each worker task in a
             // separate Thread.
-            setExecutor (r -> {
-                Thread thread = new Thread(r);
-                mWorkerThreads.add (thread);
-                thread.start();
-            });
+            setExecutor (runnable -> mWorkerThreads
+                .add(Thread.startVirtualThread(runnable))
+            );
 
         // Enqueue each item in the input List for execution in a
         // separate Thread.
@@ -50,21 +57,19 @@ public class OneShotThreadPerTask
     }
 
     /**
-     * Runs in a background Thread and searches the inputData for all
-     * occurrences of the words to find.
+     * Runs in a background {@link Thread} and searches the {@code
+     * inputData} for all occurrences of words to find.
      */
     @Override
     protected boolean processInput (String inputData) {
         // Iterate through each word we're searching for.
         for (String word : mWordsToFind) {
             // Try to find the word in the inputData.
-            SearchResults results = searchForWord(word, 
-                                                  inputData);
+            SearchResults results = searchForWord(word, inputData);
 
             // Each time a match is found the SearchResult.print()
-            // method is called to print the output.  We put this
-            // call in a synchronized block so the output isn't
-            // scrambled.
+            // method is called to print the output.  We put this call
+            // in a synchronized block so the output isn't scrambled.
             synchronized(System.out) {
                 results.print();
             }
@@ -74,16 +79,13 @@ public class OneShotThreadPerTask
     }
 
     /**
-     * Hook method that uses Thread.join() as an exit barrier to wait
-     * for the gang of tasks to exit.
+     * This hook method uses {@link Thread#join()} as an exit barrier
+     * to wait for the gang of tasks to exit.
      */
     protected void awaitTasksDone() {
+        // Iterate through all the Thread objects and join them.
         for (Thread thread : mWorkerThreads)
-            try {
-                thread.join();
-            } catch (InterruptedException e) {
-                System.out.println("awaitTasksDone interrupted");
-            }
+            rethrowRunnable(thread::join);
     }
 }
 
